# ZPatch

./: .gitignore  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/quickits/zpatch/sample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/quickits/zpatch/sample/: MainActivity.kt
android/app/src/main/java/com/quickits/zpatch/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/quickits/zpatch/sample/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
cli/: CMakeLists.txt  build-all.sh  build-linux-amd64.sh  build-mac-amd64.sh  build-mac-arm64.sh  main.cpp
core/: .gitignore  CMakeLists.txt
core/include/zpatch/: core.h
core/src/: FileBuffer.cpp  FileBuffer.h  PatchCore.cpp
